--- a/canvas_code.html
+++ b/canvas_code.html
@@ -58,6 +58,18 @@
         draggable: true,
         offset:10
       });
+      var box3= new Kinetic.Rect({
+        x: 15,
+        y: 165,
+        width: 100,
+        height: 50,
+        fill: '#00D2FF',
+        stroke: 'black',
+        strokeWidth: 4,
+        draggable: true,
+        offset:10
+      });
+
      var line = new Kinetic.Line({
       x: 200,
       y: 0,
@@ -84,11 +96,24 @@
         if (box2.getAttr('x')>=400) {
           console.log("Method(){")
         };
+
       });
+      box3.on('click', function() {
+        writeMessage('dragstart');
+      });
+      box3.on('dragend', function() {
+        writeMessage('dragend');
+        if (box2.getAttr('x')>=400) {
+          console.log("Var")
+        };
+        
+      });
+
 layer.add(line);
       layer.add(text);
       layer.add(box);
       layer.add(box2);
+      layer.add(box3);
       stage.add(layer);
 
     </script>
