--- a/parserTesting/test.html
+++ b/parserTesting/test.html
@@ -10,6 +10,18 @@
 <canvas id="canvas" width="506" height="400" style = "border:solid; position:none" ></canvas>
 <p>
 <button style = "width:100px" id = "rotate" onclick = "playAnimation()">Next Animation!</button>
+<p>
+<span id = "1"> mediaInput1 = {"functionName" : "jump", "imageName": "mario.jpg", "soundName": "smb_jumpsmall.mp3", "duration": 100, "height": 50} </span></br>
+<span id = "2"> mediaInput2 = {"functionName" : "jump", "imageName": "mario.jpg", "soundName": "smb_jumpsmall.mp3", "duration": 100, "height": 150}  </span></br>
+<span id = "3">mediaInput3 = {"functionName" : "movR", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "distance": 175}  </span></br>
+<span id = "4">mediaInput4 = {"functionName" : "movL", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "distance": 350}  </span></br>
+<span id = "5">mediaInput5 = {"functionName" : "longJump", "imageName": "mario.jpg", "soundName": "null", "duration": 200, "distance": 350, "height": 85} </span> </br>
+<span id = "6">mediaInput6 = {"functionName" : "movD", "imageName": "mario.jpg", "soundName": "null", "duration": 100, "height": 150}  </span></br>
+<span id = "7">mediaInput7 = {"functionName" : "movL", "imageName": "mario.jpg", "soundName": "null", "duration": 100, "distance": 175}  </span></br>
+<span id = "8">mediaInput8 = {"functionName" : "movU", "imageName": "mario.jpg", "soundName": "null", "duration": 100, "height": 150}  </span></br>
+<span id = "9">mediaInput9 = {"functionName" : "rotate", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "angle": 360, "clockwise": true} </span> </br>
+<span id = "10">mediaInput10 = {"functionName" : "rotate", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "angle": 360, "clockwise": false}  </span></br>
+</p>
 <!-- <button style = "width:100px" id = "vertJump" onclick = "playContinious()">Continious Play</button> -->
 </p>
 
@@ -228,6 +240,7 @@ function movU(dur, height)
 
       } 
 
+      document.getElementById('1').style.color = "red";
       var i = 0;
       var win;
       function playAnimation()
@@ -239,6 +252,8 @@ function movU(dur, height)
               win = new Audio(mediaInput1["soundName"]);
               win.play();
               jump(mediaInput1["duration"],mediaInput1["height"]);
+               document.getElementById('1').style.color = "black";
+              document.getElementById('2').style.color = "red";
           }
 
           //higher jump
@@ -247,12 +262,16 @@ function movU(dur, height)
               win = new Audio(mediaInput2["soundName"]);
               win.play();
               jump(mediaInput2["duration"],mediaInput2["height"]);
+               document.getElementById('2').style.color = "black";
+              document.getElementById('3').style.color = "red";
           }
 
           //move right slowly
           if (mediaInput3["functionName"] == "movR" && i == 3) 
           {
               movR(mediaInput3["duration"],mediaInput3["distance"]);
+               document.getElementById('3').style.color = "black";
+              document.getElementById('4').style.color = "red";
       
           }
 
@@ -260,30 +279,40 @@ function movU(dur, height)
           if (mediaInput4["functionName"] == "movL" && i == 4) 
           {
               movL(mediaInput4["duration"],mediaInput4["distance"]);
+               document.getElementById('4').style.color = "black";
+              document.getElementById('5').style.color = "red";
           }
 
           //long jump right
           if (mediaInput5["functionName"] == "longJump" && i == 5) 
           {
               longJump(mediaInput5["duration"],mediaInput5["height"],mediaInput5["distance"],false);
+              document.getElementById('5').style.color = "black";
+              document.getElementById('6').style.color = "red";
           }
 
            //move down
           if (mediaInput6["functionName"] == "movD" && i == 6) 
           {
               movD(mediaInput6["duration"],mediaInput6["height"]);
+              document.getElementById('6').style.color = "black";
+              document.getElementById('7').style.color = "red";
           }
 
            //move left
           if (mediaInput7["functionName"] == "movL" && i == 7) 
           {
               movL(mediaInput7["duration"],mediaInput7["distance"]);
+               document.getElementById('7').style.color = "black";
+              document.getElementById('8').style.color = "red";
           }
 
           //move up
           if (mediaInput8["functionName"] == "movU" && i == 8) 
           {
               movU(mediaInput8["duration"],mediaInput8["height"]);
+              document.getElementById('8').style.color = "black";
+              document.getElementById('9').style.color = "red";
             
           }
 
@@ -291,12 +320,16 @@ function movU(dur, height)
           if (mediaInput9["functionName"] == "rotate" && i == 9) 
           {
               rotate(mediaInput9["duration"],mediaInput9["angle"],mediaInput9["clockwise"]);
+               document.getElementById('9').style.color = "black";
+              document.getElementById('10').style.color = "red";
           }
 
           //rotate COUNTERclockwise 360
           if (mediaInput10["functionName"] == "rotate" && i == 10) 
           {
               rotate(mediaInput10["duration"],mediaInput10["angle"],mediaInput10["clockwise"]);
+              document.getElementById('10').style.color = "black";
+              document.getElementById('1').style.color = "red";
               i = 0;
           }
 
@@ -306,19 +339,8 @@ function movU(dur, height)
 
 
 
-<p>
-  mediaInput1 = {"functionName" : "jump", "imageName": "mario.jpg", "soundName": "smb_jumpsmall.mp3", "duration": 100, "height": 50} </br>
-mediaInput2 = {"functionName" : "jump", "imageName": "mario.jpg", "soundName": "smb_jumpsmall.mp3", "duration": 100, "height": 150}  </br>
-mediaInput3 = {"functionName" : "movR", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "distance": 175}  </br>
-mediaInput4 = {"functionName" : "movL", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "distance": 350}  </br>
-mediaInput5 = {"functionName" : "longJump", "imageName": "mario.jpg", "soundName": "null", "duration": 200, "distance": 350, "height": 85}  </br>
-mediaInput6 = {"functionName" : "movD", "imageName": "mario.jpg", "soundName": "null", "duration": 100, "height": 150}  </br>
-mediaInput7 = {"functionName" : "movL", "imageName": "mario.jpg", "soundName": "null", "duration": 100, "distance": 175}  </br>
-mediaInput8 = {"functionName" : "movU", "imageName": "mario.jpg", "soundName": "null", "duration": 100, "height": 150}  </br>
-mediaInput9 = {"functionName" : "rotate", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "angle": 360, "clockwise": true}  </br>
-mediaInput10 = {"functionName" : "rotate", "imageName": "mario.jpg", "soundName": "null", "duration": 1000, "angle": 360, "clockwise": false}  </br>
 
-</p>
+
 
 </body>
 </html>
