--- a/ve_sortabletest/index.html
+++ b/ve_sortabletest/index.html
@@ -1,34 +1,28 @@
 <html>
-	<head>
-		<link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
-		<script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-  		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
-	</head>
-	<script>
-	  $(function() {
-	  		//Initialize Sortable
-    		$( "#sortable" ).sortable({
-    				stop: function(event, ui) {
-    					var sorted = $("#sortable").sortable( "toArray" );
-    					console.log(sorted);
-    				}
-    			}
-    			);
-    		$( "#sortable" ).disableSelection();
+<head>
+	<script src='jquery2.js'></script>
+	<script src='jquery.js'></script>
+</head>
+
+<style>
+	.list {
+  		display: inline-block;
+  		width: 5em;
+ 		background: #CCC;
+	}
+</style>
 
 
-  		});
-  </script>
+<div class="list1 list">
+  <div class="item">clone 1</div>
+  <div class="item">clone 2</div>
+  <div class="item">clone 3</div>
+</div>
+<div class="list2 list">
+  <div class="item">move 1</div>
+  <div class="item">move 2</div>
+  <div class="item">move 3</div>
+</div>
 
-	<body>
-		<ul id="sortable">
-		  <li id='1' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 1</li>
-		  <li id='2' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 2</li>
-		  <li id='3' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 3</li>
-		  <li id='4' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 4</li>
-		  <li id='5' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 5</li>
-		  <li id='6' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 6</li>
-		  <li id='7' class="ui-state-default"><span class="ui-icon ui-icon-arrowthick-2-n-s"></span>Item 7</li>
-		</ul>
-	</body>
+
 </html>
