--- a/canvas_code.html
+++ b/canvas_code.html
@@ -37,7 +37,7 @@
 
         var tools = [{'title':'new method', 'jstext':'function newMethod() {'},
                    {'title':'variable', 'jstext':'var'},
-                   {'title':'end method', 'jstext':'}'},
+                   {'title':'end', 'jstext':'}'},
                   ]
 
         for (var i = 0; i < tools.length; i++) {
