--- a/eli_dynamiccode.html
+++ b/eli_dynamiccode.html
@@ -24,11 +24,17 @@
       var params = prompt("Please enter the Parameters for your method separated by commas");
       x = "function " + mname + "(" + params + ") {";
       console.log(x);
+      return x;
     }
-    if (ids === "var") {
+    if (ids === "variable") {
       var varn = prompt("Please enter the name of your variable", "test");
       x = "var " + varn +  ";";
       console.log(x);
+      return x;
+    }
+    if (ids === "end method") {
+      x = "}";
+      return x;
     }
   }
   $(function () {
@@ -53,8 +59,8 @@
     var startY = 30;
 
     var tools = [{'title': 'method', 'jstext': ''},
-        {'title': 'var', 'jstext': ''},
-        {'title': 'end', 'jstext': '}'}
+        {'title': 'variable', 'jstext': ''},
+        {'title': 'end method', 'jstext': '}'}
         ];
 
     var i;
@@ -62,7 +68,8 @@
     function newRect(x, y, id) {
       var group = new Kinetic.Group({
         id: id,
-        draggable: true
+        draggable: true,
+        listening: true
       });
       var rect = new Kinetic.Rect({
         x: startX,
@@ -71,7 +78,7 @@
         height: 50,
         fill: '#00D2FF',
         stroke: 'black',
-        strokeWidth: 3,
+        strokeWidth: 2,
         offset: 10
       });
 
@@ -82,7 +89,7 @@
         fontSize: 12,
         fontFamily: 'Calibri',
         stroke: 'black',
-        strokeWidth: 2
+        strokeWidth: 1
       });
 
       //have the rectangles save its orginal XY
@@ -96,12 +103,21 @@
         if (dx + 20 > line.getX()) {
           //BELOW DO WHAT YOU DO WHEN SOMETHING GETS DRAGGED OVER
           var id = this.attrs.id;
-          promptUser(id);
-          //In this example, I loop through our list again and see what javascript is associated with our whichever tool was dragged over.
-          for (i = 0; i < tools.length; i++) {
-            if (id === tools[i].title) {
-              if (tools[i].jstext !== '') {
-                console.log(tools[i].jstext);
+          var groupArray = (this.getChildren()).toArray();
+          var text = groupArray[1];
+          //Only change text, or write to console on first time being dragged over
+          if (text.isListening()) {
+            text.setText(promptUser(id));
+            var currentRect = groupArray[0];
+            var height = currentRect.getHeight();
+            currentRect.setSize(text.getWidth() + 30, height);
+            text.setListening(false);
+            //In this example, I loop through our list again and see what javascript is associated with our whichever tool was dragged over.
+            for (i = 0; i < tools.length; i++) {
+              if (id === tools[i].title) {
+                if (tools[i].jstext !== '') {
+                  console.log(tools[i].jstext);
+                }
               }
             }
           }
