--- a/storyCreator/Kitten/test.html
+++ b/storyCreator/Kitten/test.html
@@ -54,6 +54,18 @@ function makeNewObject()
         $("body").append('<br/><br/>');
 }
 
+//**********************************************************************************************************************************
+//THESE ARE THE THINGS WE NEED TO WORK ON
+//**********************************************************************************************************************************
+
+//need a find object (from object creators)  aka the ajax "get()" function that calls the .php page that loads the information we want from the SQL database 
+	//then draw the object on the story panel with initial x and y
+//need a find method (from visual editor)
+	//methods with parameters from the Visual Editor module and add the time that the user speciﬁed the action to occur
+//need a find animation methods 
+	//call the animation methods with the parameters from the visual editors
+
+
 </script>
 
 Set a new time:
