--- a/object_creator_integration_1/Example.html
+++ b/object_creator_integration_1/Example.html
@@ -7,7 +7,6 @@ Make a New Object!
  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 </head>
 <body>	
-
 <div>
 	<canvas id= "canvas" height="500" width="500" style="border:2px solid #000000;"></canvas>
 </div>
@@ -19,9 +18,9 @@ Make a New Object!
 	Draw a rectangle with height: <input type= "text" id="RecHeight"> width: <input type= "text" id="RecWidth">
 	<button onclick="drawRec()" >Draw Rectangle</button><br>
 	Draw a circle with radius: <input type= "text" id="r">
-	<button onclick="drawCircle()" >Draw Circlet</button><br>
-	Clear the canvas: <id="r">
-	<button onclick="clearCanvas()" >Clear</button><br>
+	<button onclick="drawCircle()" >Draw Circle</button><br>
+	<id="r">
+	<button onclick="clearCanvas()" >Clear Canvas</button><br>
 	<!--<script type="text/javascript" src="script.js"></script>-->
 	<script> 
 	var savedObjects = new Array();
@@ -60,21 +59,19 @@ Make a New Object!
 		ctx.clearRect(0,0,canvas.width,canvas.height);
 	}
 	
-	//save the images as an array in an array with the first element being the image source code and the 2nd being the name.
+	//
 	function saveObject()
 	{	
-		//make sure they entered a name
 		var name = document.getElementById("SaveName").value;
 		if(name == ""){
 		alert("Please enter a name to save the file as.");
 		return false;
 		}
-		//get the source code for the image and create the name
+		
 		var canvas = document.getElementById("canvas");
 		var img = canvas.toDataURL(name + "/png");
 		var imgName = name +".png";
 		var i;
-		//if the name already exists then overwrite the source code with the new image.
 		for (i = 0; i < savedObjects.length; i++) {
 			if (savedObjects[i][1] == imgName) {
 				savedObjects[i][0] = img;
@@ -82,7 +79,6 @@ Make a New Object!
 				return true;
 			}
 		}
-		//if it doesn't already exists then create a new image at the end of the array.
 		savedObjects.push([img,imgName]);
 		alert("Saved!");
 		return true;
@@ -115,6 +111,31 @@ Make a New Object!
 		return false;
 		
 	}
+	
+	function exporting(){
+	    var objectArrayName = document.getElementById("ObjectName").value;
+		if(objectArrayName == ""){
+		alert("Please enter a name so we can save the object.");
+		return false;
+		}
+	    $.ajax({
+           type: "POST",
+           data: {ObjectArray: savedObjects},
+           url: "functions\save.php"
+        });
+        $.ajax({
+           type: "POST",
+           data: {ObjectName: objectArrayName},
+           url: "functions\save.php",
+           success: function(){
+				alert("Exported successfully");
+            },
+			error: function() {
+				alert("failure");
+			},
+        });
+	
+	}
 
 
 	</script>
@@ -122,15 +143,19 @@ Make a New Object!
 
 <div id="radio">
  <input type="radio" id="radio1" name="radio" onClick = "choice1()"><label for="radio1">Draw Lines</label>
- <input type="radio" id="radio2" name="radio" checked="checked"><label for="radio2">Choice 2</label>
+ <input type="radio" id="radio2" name="radio" checked="checked"><label for="radio2">Just Fun to Click</label>
  <input type="radio" id="radio3" name="radio" onClick = "choice3()"><label for="radio3">Free Draw</label>
 </div>
 <script> $( "#radio" ).buttonset(); </script>
 Save file name as: <input type= "text" id= "SaveName">
-<button onclick="saveObject()">Save</button></br>
+<button onclick="saveObject()">Save Piece</button></br>
 Load file of name (ex: "head.png"): <input type= "text" id= "TestName">
 <button onclick="displayImage()">Test Save</button></br>
-<button>Export</button>
+
+Save total object as (ex: 'person1'): <input type= "text" id= "ObjectName">
+<!--<div id="myDiv">
+<input type= "text" id= "LineLength"> -->
+<button type="button" onclick="exporting()">Export Complete Character</button>
 
 <script>
 function choice1()
