--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -10,7 +10,7 @@
 	<script src='objectTest.js' type = 'text/javascript'></script>
 	<script src='VETest.js' type = 'text/javascript'></script>
 	<script src='dataRequests.js' type = 'text/javascript'></script>
-	<script src = 'object_creator/jfile.js' type = 'text/javascript></script>
+	<script src = 'object_creator/jfile.js' type = 'text/javascript'></script>
 	<script src='Animation/animationBlocks.js' type = 'text/javascript'></script>
 
 </head>
