--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -15,7 +15,7 @@
 	<script src='Animation/animationBlocks.js' type = 'text/javascript'></script>
 
 </head>
-<body id = 'body'>
+<body>
 
 	<div class="animationContainer">
 		<canvas id="myCanvas" width="800"height="400"></canvas>
