--- a/storyCreator/test.html
+++ b/storyCreator/test.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
 	<link rel="stylesheet" type="text/css" href="story_creator.css">
-	
-	
-	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
 	<script src='objectTest.js' type = 'text/javascript'></script>
@@ -13,15 +9,12 @@
 	<script src='dataRequests.js' type = 'text/javascript'></script>
 	<script src = 'object_creator/jfile.js' type = 'text/javascript'></script>
 	<script src='Animation/animationBlocks.js' type = 'text/javascript'></script>
-
 </head>
 <body>
-
-	
 		<div class="animationContainer">
 			<canvas id="myCanvas" width="800"height="400"></canvas>
 		</div>
-	
+
 		<div class="VEContainer">
 			<canvas id="VECanvas"></canvas>
 		</div>
@@ -29,9 +22,13 @@
 		<div class="objectContainer">
 			<canvas id="objectCanvas"></canvas>
 		</div>
-
 <script>
-
+	myCanvas.width = (window.innerWidth / 1.8);
+	myCanvas.height = (window.innerHeight / 1.8);
+	VECanvas.width = (window.innerWidth / 2.4);
+	VECanvas.height = (window.innerHeight / 1.08);
+	objectCanvas.width = (window.innerWidth / 1.8);
+	objectCanvas.height = (window.innerHeight / 2.8);
 
 	oCanvasElement = wrapHTMLCanvasToOcanvas(document.getElementById("myCanvas"), '#FFFFFF');  //get the OCanvas so we can animate
 
